k8s/base/mysql-deployment.yml
apiVersion: v1
kind: Deployment
metadata:
  name: mysql
  labels:
    app: mysql
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mysql
  template:
    metadata:
     labels:
      app: mysql
  spec:
    containers:
      - name: mysql
        image: mysql:8.0
        ports:
          containerPort: 3306
        volumeMounts:
          - name: mysql-data
            mountPath: /var/lib/mysql
    volumes:
     - name: mysql-data
       emptyDir: {}
