k8s/base/flaskapp-svc.yml
apiVersion: v1
kind: Service
metadata:
  name: flask-app
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 5000
  selector:
    app: flask-app
