k8s/base/mysql-svc.yml
apiVersion: v1
kind: Service
metadata:
  name: mysql
  labels:
    app: mysql
spec:
  ports:
    - port: 3306
      protocol: TCP
  selector:
    app: mysql
