k8s/base/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: flask-app-ingress
  annotations:
   nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: "flaskapp.${NAMESPACE}.ngrok.io"
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: flask-app
            port:
              number: 80
